Bug 802776 - Update deprecated calls in NSOpenPanel and NSSavePanel and transform default directory paths strings to URIs so they work as expected. r=josh